# obscura

./: .env.example  .gitignore  .prettierignore  .vercelignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  eslint.config.mjs  lighthouserc.json  next.config.ts  package-lock.json  package.json  playwright.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
circuit/: Nargo.toml  Prover.toml  README.md
circuit/src/: main.nr
circuit_multinet/: Nargo.toml  Prover.toml  README.md
circuit_multinet/src/: main.nr
circuit_netting/: Nargo.toml  Prover.toml  README.md
contract/: Cargo.toml  README.md
contract/src/: lib.rs
contract/test_snapshots/test/: test_double_initialize_fails.1.json  test_invalid_proof_rejection.1.json  test_prevent_post_due_date_settlement.1.json  test_set_verification_key.1.json  test_set_verification_key_non_admin_fails.1.json  test_settle_invoice_wrong_public_inputs_length_fails.1.json  test_settle_netting_v3_duplicate_session_fails.1.json  test_settle_netting_v3_success.1.json  test_settle_netting_v3_zero_net_amount_no_transfer.1.json  test_successful_settlement.1.json  test_verify_invoice_proof_cases.1.json
db/: schema.sql  seed.sql
docs/: AUDIT_REPORT.md  DX-REPORT.md
e2e/: core-flow.spec.ts  responsive.spec.ts  smoke.spec.ts
public/: pitch.html
scripts/: bench.py  check_submission_readiness.py  gen-proof-fixture.mjs  prove-and-verify-multinet.mjs  prove-and-verify-netting.mjs  prove-and-verify.mjs  release-bump.ts  run_tests.js  seed.js  seed_anomalies.py  test.js  verify_offline.py
src/app/: page.tsx  (+6 more)
(+14 files in other folders)
